# aiot-digi

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/ConnectWlan/: CMakeLists.txt  connect_wlan.cpp  connect_wlan.h
components/ControlCamera/: CCamera.cpp  CCamera.h  CMakeLists.txt  server_camera.cpp  server_camera.h
components/FlowControl/: CFlow.cpp  CFlow.h  CFlowAlignment.cpp  CFlowAlignment.h  CFlowControl.cpp  CFlowControl.h  CFlowDigit.cpp  CFlowDigit.h  CFlowImage.cpp  CFlowImage.h  CFlowMakeImage.cpp  CFlowMakeImage.h  CFlowPostProcessing.cpp  CFlowPostProcessing.h  CMakeLists.txt
components/Image/: CAlignAndCutImage.cpp  CAlignAndCutImage.h  CFindTemplate.cpp  CImageBasis.cpp  CMakeLists.txt
components/TFLite/: CMakeLists.txt  CTfLiteClass.cpp  CTfLiteClass.h  server_tflite.cpp  server_tflite.h
components/connect_wlan/: CMakeLists.txt  connect_wlan.cpp  connect_wlan.h
components/header/: CMakeLists.txt  userGPIO.h
components/helper/: CMakeLists.txt  Helper.cpp  ServerHelper.cpp  ServerHelper.h
components/lib1/: CMakeLists.txt  lib.cpp
documents/: lvtn-2024.docx  ~$tn-2024.docx
main/: CMakeLists.txt  main.c  main.cpp  sdcard.h  server_file.cpp  server_file.h  server_main.cpp  server_main.h
